--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-15-04: Town\Town_Amatsu.txt - Updated and activated npc emotions. [Muad_Dib]
 - 06-15-04: Warp\newbies\new_zone.txt - Updated and now includes server side map entries. [Tsusai]
 - 06-15-04: Warp\other\force_map.txt - Updated and now includes server side map entries. [Tsusai]
 - 06-15-04: Warp\other\Arena_Test.txt - Removed, entries put into force_map.txt [Tsusai]
