- 06-15-04: Removed translated npc_town_amatsu, updated Town_Amatsu with it. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2170 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Japanese Scripts/Changelog.txt
+++ b/Scripts/Japanese Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-15-04: Removed translated npc_town_amatsu, updated Town_Amatsu with it. [Muad_Dib]
 - 06-15-04: Removed translated npc_town_guide, is already translated. [Muad_Dib]
 - 06-15-04: Removed translated npc_event_yuno, it is now in Town_Juno.txt [Muad_Dib]
 - 06-15-04: Removed translated npc_job_supernovice, it is now in Job_Super_Novice.txt [Muad_Dib]
