- 06-15-04: Removed translated npc_town_amatsu, updated Town_Amatsu with it. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2173 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-16-04: Warp\other\job_sword.txt - Fixed Faulty Hidden Warps. [Muad_Dib]
 - 06-15-04: Job\Job_2-1\Job2_Wizard.txt - Meus deus... Uploaded my copy with debug lines on the first mob test. [Tsusai]
 - 06-15-04: Town\Town_Amatsu.txt - Updated and activated npc emotions. [Muad_Dib]
 - 06-15-04: Warp\newbies\new_zone.txt - Updated and now includes server side map entries. [Tsusai]
