--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-18-04: Warp\other\job_sword.txt - Added 3 commented out random warps with broadcasts untill OnTouch is made. [Muad_Dib]
 - 06-15-04: Warp\other\force_map.txt - Forgot to leave some warp names alone. [Tsusai]
 - 06-16-04: Event\Event_Alchemist.txt - Added Event Alchemist. [Muad_Dib]
 - 06-16-04: Warp\other\job_sword.txt - Fixed Faulty Hidden Warps. [Muad_Dib]
