--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-20-04: Job\Job_2-1\Job2_Wizard.txt - Modified Water Test for testing. [Tsusai]
+- 06-20-04: GvG\aldeg_cas01.txt - Deleted an extra close; [Tsusai]
 - 06-20-04: Job\Job_2-1\Job2_Wizard.txt - added a debug line for bug finding. [Tsusai]
 - 06-20-04: Town\Town_Guide.txt - Added Amatsu and Umbala guide. [Muad_Dib]
 - 06-18-04: Warp\other\job_sword.txt - Added 3 commented out random warps with broadcasts untill OnTouch is made. [Muad_Dib]
