--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,11 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-22-04: Warp\Jawaii.txt - Added Jawaii warps. [Muad_Dib]
+- 06-22-04: Mob\field\nif_fild.txt - Updated Niflheim mon spawns. [Muad_Dib]
+- 06-22-04: Warp\dungeons\lou_dun.txt - - Updated Louyang warps. [Muad_Dib]
+- 06-22-04: Warp\fields\lou_fild.txt - Updated Louyang warps. [Muad_Dib]
+- 06-22-04: Warp\towns\Louyang.txt - Updated Louyang warps. [Muad_Dib]
 - 06-20-04: Job\Job_2-1\Job2_Wizard.txt - Turned \@ vars to \ vars for testing. [Tsusai]
 - 06-20-04: Job\Job_2-1\Job2_Wizard.txt - Modified Water Test for testing. [Tsusai]
 - 06-20-04: GvG\aldeg_cas01.txt - Deleted an extra close; [Tsusai]
