--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-26-04: Job_Job_2-2\Job2_Crusader.txt - Corrected a ; syntax error. [Tsusai]
 - 06-26-04: Job\Job_2-1\Job2_Wizard.txt - Mob test reinserted. [Tsusai]
 - 06-26-04: Job\Job_2-1\Job2_Wizard_MobTest.txt - Finalized, and removed.  Content now in Job2_Wizard.txt [Tsusai]
 - 06-26-04: Town\Town_Jawaii.txt - Contains warper back to izlude. [Muad_Dib]
