--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,11 +1,12 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-26-04: Job\Job_2-1\Job2_Knight.txt - removed a double "npctimer 0;", might be causeing a problem. [Tsusai]
 - 06-26-04: GvG\npc_guardiankafra.txt - Added nguild guardian fix npcs (Phase 3/8). [Tsusai]
 - 06-26-04: GvG\npc_guardiankafra.txt - Rolled back due to accidental commit. [Tsusai]
 - 06-26-04: GvG\npc_empelium.txt - Added Emperium locations for Novice Guild (Phase 2/8). [Tsusai]
 - 06-26-04: Warp\guilds\nguild.txt - Added Novice guild castle warps (Phase 1/8). [Tsusai]
-- 06-26-04: Job_Job_2-2\Job2_Crusader.txt - Corrected a ; syntax error. [Tsusai]
+- 06-26-04: Job\Job_2-2\Job2_Crusader.txt - Corrected a ; syntax error. [Tsusai]
 - 06-26-04: Job\Job_2-1\Job2_Wizard.txt - Mob test reinserted. [Tsusai]
 - 06-26-04: Job\Job_2-1\Job2_Wizard_MobTest.txt - Finalized, and removed.  Content now in Job2_Wizard.txt [Tsusai]
 - 06-26-04: Town\Town_Jawaii.txt - Contains warper back to izlude. [Muad_Dib]
