--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-26-04: GvG\ncastle.txt - Added Flags at the Novice Castle map (Phase 4/8). [Tsusai]
 - 06-26-04: Job\Job_2-1\Job2_Knight.txt - removed a double "npctimer 0;", might be causeing a problem. [Tsusai]
 - 06-26-04: GvG\npc_guardiankafra.txt - Added nguild guardian fix npcs (Phase 3/8). [Tsusai]
 - 06-26-04: GvG\npc_guardiankafra.txt - Rolled back due to accidental commit. [Tsusai]
