--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-30-04: Town\Town_Prontera.txt - Moved a npc out of a black part. [Muad_Dib]
 - 06-30-04: Warp\towns\Amatsu.txt - Fixed a warp that got you stuck. [Muad_Dib]
 - 06-30-04: Shop\payon.txt - Changed a sprite that did not show. [Muad_Dib]
 - 06-28-04: Job\Job_1\Job1_Theif.txt - Now removes all mushrooms you might have. [Tsusai]
