--------------------------------------------------------------------------------  Fusion 1.213 - August 29th, 2004 --------------------------------------------------------------------------------
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2230 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,4 +1,10 @@
 --------------------------------------------------------------------------------
+ Fusion 1.213 - August 29th, 2004
+--------------------------------------------------------------------------------
+
+
+
+--------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
 - 07-02-04: Job\Job_2-1\Job2_Blacksmith.txt - add skill point checker. [nestor_zulueta]
