--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+ Fusion 1.213 - August 29th, 2004
+--------------------------------------------------------------------------------
+
+
+--------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 -------------------------------------------------------------------------------- 
  - 07-02-04: Added Priced All-Jobs Job Changer script (ENG) - Job Changers\All_Jobs-zeny.txt. [Yun Qi]
