- 07-05-04: Renamed Errored Labels in All_Jobs-zeny script (ENG) - Player\\All_Jobs-zeny.txt. [Yun Qi]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2232 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+ - 07-05-04: Renamed Errored Labels in All_Jobs-zeny script (ENG) - Player\All_Jobs-zeny.txt. [Yun Qi]
 
 
 --------------------------------------------------------------------------------
