- 07-05-04: GvG\\npc_guardiankafra.txt - Corrected Spelling mistakes in enablenpc commands. [Tsusai] - 07-05-04: Job\\Novice\\Job_Novice.txt - Updated NPC mapnames. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2233 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,7 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
-
+- 07-05-04: GvG\npc_guardiankafra.txt - Corrected Spelling mistakes in enablenpc commands. [Tsusai]
+- 07-05-04: Job\Novice\Job_Novice.txt - Updated NPC mapnames. [Tsusai]
 
 
 --------------------------------------------------------------------------------
