Job\\Job_2-2\\Job2_alchemist.txt - alchemist job quest added. [nestor_zulueta]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2235 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-06-04: Job\Job_2-2\Job2_alchemist.txt - alchemist job quest added. [nestor_zulueta]
 - 07-05-04: GvG\npc_guardiankafra.txt - Corrected Spelling mistakes in enablenpc commands. [Tsusai]
 - 07-05-04: Job\Novice\Job_Novice.txt - Updated NPC mapnames. [Tsusai]
 
