--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-06-04: Mob\other\dragon_boat_festival_mob.txt - Added Dragon Boat Festival Mobs. [Muad_Dib]
+- 07-06-04: Mob\field\nif_fild.txt - Fixed Ghostring Spawn. [Muad_Dib]
+- 07-06-04: Town\Town_Kafra.txt - Removed Amatsu, Gon Ryune, Umbala Kafra's and added official ones. [Muad_Dib]
 - 07-06-04: Job\Job_2-2\Job2_alchemist.txt - alchemist job quest added. [nestor_zulueta]
 - 07-05-04: GvG\npc_guardiankafra.txt - Corrected Spelling mistakes in enablenpc commands. [Tsusai]
 - 07-05-04: Job\Novice\Job_Novice.txt - Updated NPC mapnames. [Tsusai]
