--- a/Scripts/Custom Scripts/Changelog.txt
+++ b/Scripts/Custom Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+ - 07-10-04: Added Directional Sign Posts script (ENG) - Map\Sign_Posts.txt. [Yun Qi]
  - 07-08-04: Added Valkyrie warper to Samurai Warper script (ENG) - Map\SamuraiWarpers_100+300.txt. [Yun Qi]
  - 07-05-04: Added resetmymob script (ENG) - Recreation\Mob_killer.txt. [Yun Qi]
  - 07-05-04: Renamed Errored Labels in All_Jobs-zeny script (ENG) - Player\All_Jobs-zeny.txt. [Yun Qi]
