--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-12-04: Warp\dungeons\gefenia_dun.txt - Added Gefenia warps. [Muad_Dib]
 - 07-07-04: Event\Event_NGuild.txt - Changed checkstr to check. [Tsusai]
 - 07-07-04: shop\niflheim.txt - Fixed Bastard Sword Price. [Muad_Dib]
 - 07-06-04: Town\Town_Umbala.txt - Cleaned up and added official script. [Tsusai]
