--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-29-04: Job\Job_1-1\*.* - Updated scripts in preparation of semi-official Adv Class script. [Tsusai]
+- 07-29-04: Job\Job_1-1\Job1_Magician.txt - Mage Mixing Machine Redone and now official (ph33r me). [Tsusai]
 - 07-17-04: Event\Event_Making.txt - Alberta hat merchant now shows correctrequirements. [Muad_Dib]
 - 07-17-04: Mob\field\nif_fild.txt - Updated Spawns. [Muad_Dib]
 - 07-17-04: Mob\other\niflheim_town.txt - Added Spawns. [Muad_Dib]
