--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 08-03-04: Mob\dungeon\gefenia_dun.txt - Addeds Geffenia mobs. [Muad_Dib]
+- 08-03-04: Event\Event_Geffenia.txt - Added geffenia Dungeon Script [Muad_Dib]
+- 08-03-04: Warp\dungeons\gefenia_dun.txt - Updated Geffenia warps. [Muad_Dib]
 - 07-29-04: Warp\towns\Umbala.txt - Moved warp here, turned into a hiddenwarp. (why didn't i c this b4?) [Tsusai]
 - 07-29-04: Town\Town_Umbala.txt - removed bungee area script warp. [Tsusai]
 - 07-29-04: Job\Job_1-1\*.* - Updated scripts in preparation of semi-official Adv Class script. [Tsusai]
