--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 08-12-04: Job\Job_1-1\Job1_Archer.txt - Added missing label that caused server crash. [Tsusai]
 - 08-03-04: Mob\dungeon\gefenia_dun.txt - Addeds Geffenia mobs. [Muad_Dib]
 - 08-03-04: Event\Event_Geffenia.txt - Added geffenia Dungeon Script [Muad_Dib]
 - 08-03-04: Warp\dungeons\gefenia_dun.txt - Updated Geffenia warps. [Muad_Dib]
