--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 08-19-04: Event\Event_Dragon_Boat_Festival.txt - Fixed Header and some typos. [Muad_Dib]
 - 08-18-04: Event\Event_Dragon_Boat_Festival.txt - Added Dragon Boat Festival Npc. [Muad_Dib]
 - 08-18-04: Mob\all files. - Updated all mob spawns, next step will be the way kro has it. [Muad_Dib]
 - 08-12-04: Job\Job_1-1\Job1_Archer.txt - Added missing label that caused server crash. [Tsusai]
